--- a/html-css/proj-portfolio-2/css/style.css
+++ b/html-css/proj-portfolio-2/css/style.css
@@ -4,6 +4,8 @@
 	--lavender: #b4befe;
 	--mauve: #cba6f7;
 	--blue: #89b4fa;
+	--font-primary: "Nunito", sans;
+	--font-secondary: "Nunito", sans-serif;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
@@ -17,7 +19,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Nunito", sans-serif;
+	font-family: var(--font-secondary);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -43,7 +45,7 @@ body {
 }
 
 .cabecalho__menu__link{
-	font-family: "Nunito", sans-serif;
+	font-family: var(--font-secondary);
 	font-weight: 600;
 	font-size: 0.9rem;
 	text-decoration: none;
@@ -75,7 +77,7 @@ body {
 }
 
 .texto {
- 	font-family: "Nunito", sans-serif;
+ 	font-family: var(--font-secondary);
 }
 
 .apresentacao__links {
@@ -98,7 +100,7 @@ body {
 	color: var(--text);
 	border: 2px solid var(--lavender);
 	font-size: 1.2rem;
-	font-family: "Nunito", sans;
+	font-family: var(--font-primary);
 	font-weight: 600;
 	padding: 20px 0;
 	border-radius: 14px;
@@ -123,7 +125,7 @@ body {
 
 .rodape {
 	color: var(--base);
-	font-family: "Nunito", sans;
+	font-family: var(--font-primary);
 	font-weight: 600;
 	font-size: 0.8;
 	padding: 0.8rem 0;
@@ -134,4 +136,5 @@ body {
 
 .social-logo {
 	width: 2rem;
+	font-size: 1.2rem;
 }
