--- a/html-css/proj-portfolio-2/css/style.css
+++ b/html-css/proj-portfolio-2/css/style.css
@@ -24,9 +24,8 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	height: 100%;
+	height: 100vh;
 	display: flex;
-	gap: 10rem;
 	background-color: var(--base);
 	color: var(--text);
 }
@@ -47,7 +46,7 @@ body {
 .cabecalho__menu__link{
 	font-family: var(--font-secondary);
 	font-weight: 600;
-	font-size: 0.9rem;
+	font-size: 1.5rem;
 	text-decoration: none;
 	color: var(--text);
 }
@@ -68,7 +67,7 @@ body {
 }
 
 .titulo {
-	font-size: 2.5rem;
+	font-size: 2.25rem;
 	font-weight: 700;
 }
 
@@ -77,6 +76,7 @@ body {
 }
 
 .texto {
+	font-size: 1.5rem;
  	font-family: var(--font-secondary);
 }
 
@@ -84,7 +84,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 1rem;
+	gap: 1.5rem;
 	justify-content: space-between;
 }
 
@@ -95,11 +95,11 @@ body {
 }
 
 .apresentacao__links .link {
-	width: 16em;
+	width: 50%;
 	text-align: center;
 	color: var(--text);
 	border: 2px solid var(--lavender);
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 	font-family: var(--font-primary);
 	font-weight: 600;
 	padding: 20px 0;
@@ -119,7 +119,7 @@ body {
 }
 
 .imagem-de-perfil {
-	width: 35rem;
+	width: 50%;
 	border-radius: 50%;
 }
 
@@ -127,7 +127,7 @@ body {
 	color: var(--base);
 	font-family: var(--font-primary);
 	font-weight: 600;
-	font-size: 0.8;
+	font-size: 1.5rem;
 	padding: 0.8rem 0;
 	background-color: var(--lavender);
 	width: 100%;
